# docstats

./: .gitignore  AGENTS.md  README.md  baseline_analysis.py  extraction.py  fastapi_app.py  lessons_learned.md  main.py  mcp_server.py  metrics.py  models.py  pyproject.toml  requirements.txt  ruff.toml  test_main.py  test_mcp_stdio.py  test_unit.py
.beads/: last-touched
samples/: baseline_results.json  level_academic.txt  level_legal.txt  level_middle.txt  level_primary.txt
